<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/myColor"
            app:titleTextColor="@android:color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/uber_move_bold"
            android:padding="10dp"
            android:text="Add new product:"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/etItemName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/orders_item_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/itemname"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/myColor" />

            <EditText
                android:id="@+id/etItemPrice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/orders_item_shape"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/price"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/myColor" />

            <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/orders_item_shape"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <TextView
                    android:id="@+id/tvAvailable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="Yes"
                    android:textColor="@color/myColor"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvNotAvailable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="No"
                    android:textColor="@color/myColor"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchAvailable"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp" />

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/myColor" />

            <Spinner
                android:id="@+id/spCategories"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/orders_item_shape"
                android:popupBackground="@drawable/orders_item_shape"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="5dp"
                android:background="@color/myColor" />

            <TextView
                android:id="@+id/tvScedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/uber_move_bold"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="Schedule:"
                android:textColor="@color/myColor"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFrom"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/orders_item_shape"
                    android:backgroundTint="@color/myColor"
                    android:gravity="center"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/From"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/orders_item_shape"
                    android:backgroundTint="@color/myColor"
                    android:gravity="center"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/To"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvTo"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/orders_item_shape"
                    android:backgroundTint="@color/myColor"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/From"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/myColor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/etItemImage"
                    android:layout_width="160dp"
                    android:layout_height="130dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/food_placeholder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/etItemImage"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnPickImage"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/myColor"
                        android:gravity="center"
                        android:text="Pick Image"
                        android:textColor="@color/white" />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/myColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDone"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/myColor"
                    android:text="@string/done"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
